Fix dropdown menu behind header secondary menu - Issue #65

--- a/bulma/layout/header.sass
+++ b/bulma/layout/header.sass
@@ -7,7 +7,6 @@
   line-height: 24px
   position: relative
   text-align: center
-  z-index: 2
   .container
     align-items: stretch
     box-shadow: 0 1px 0 rgba($border, 0.3)
